* Mon Nov 25 2024 Steven Pritchard <steve@sicura-us> - 8.14.4
- Fix more use of legacy facts

* Tue Jul 16 2024 Steven Pritchard <steve@sicura.us> - 8.14.3
- Fix comparison of space_left and admin_space_left as percentages

* Mon Jul 08 2024 Steven Pritchard <steve@sicura.us> - 8.14.2
- Remove calls to deprecated parameters (for Puppet 8 compatibility)

* Wed Jul 03 2024 Steven Pritchard <steve@sicura.us> - 8.14.1
- Clean up legacy fact usage for Puppet 8 compatibility

* Wed Nov 22 2023 ben <benrobertson9876@gmail.com> - 8.14.0
- (SIMP-10744) Add purge behaviour for auditd rules

* Tue Oct 24 2023 Joshua Hoblitt <josh@hoblitt.com> - 8.13.0
- Add EL9 support

* Wed Oct 11 2023 Steven Pritchard <steve@sicura.us> - 8.12.0
- [puppetsync] Updates for Puppet 8
  - These updates may include the following:
    - Update Gemfile
    - Add support for Puppet 8
    - Drop support for Puppet 6
    - Update module dependencies

* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 8.11.0
- Add AlmaLinux 8 support

* Thu Aug 17 2023 Mike Riddle <mike@sicura.us> - 8.10.1
- Add RHEL 9 hieradata

* Wed Jul 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 8.10.0
- Add RockyLinux 8 support

* Tue Jun 13 2023 Mike Riddle <mike@sicura.us> - 8.9.1
- All of the rule files will now have the same mode defined for /etc/audit/rules.d

* Tue Nov 15 2022 Joshua Hoblitt <josh@hoblitt.com> - 8.9.0
- do not include auditd::config::grub on hosts without grub
- fix simp base profile to work when grub_version fact is not set

* Fri Jul 29 2022 Benedikt Fischer <benedikt.fischer@noris.de> - 8.8.0
- Make parameter backlog_wait_time optional because there are auditd versions not supporting it

* Fri Jun 24 2022 Trevor Vaughan <trevor@sicura.us> - 8.8.0
- Add support for Amazon Linux 2

* Sat Jun 11 2022 Trevor Vaughan <trevor@sicura.us> - 8.7.5
- Actually fix flapping on rotated audit log files

* Fri Jun 03 2022 Trevor Vaughan <trevor@sicura.us> - 8.7.4